Finish dynamic pages initial setup. home and artist

--- a/app/views/dynamic_pages/artist.html.erb
+++ b/app/views/dynamic_pages/artist.html.erb
@@ -1,2 +1,7 @@
-<h1>DynamicPages#artist</h1>
-<p>Find me in app/views/dynamic_pages/artist.html.erb</p>
+<% provide(:title, "Artists") %>
+
+<h1>Artist</h1>
+
+<p>
+  This is a placeholder for the Artist page.
+</p>
