--- a/app/views/dynamic_pages/home.html.erb
+++ b/app/views/dynamic_pages/home.html.erb
@@ -1,2 +1,6 @@
-<h1>DynamicPages#home</h1>
-<p>Find me in app/views/dynamic_pages/home.html.erb</p>
+<% provide(:title, "A Hub Of Cover Songs From Talented Artists Who Deserve Musical Recognition") %>
+
+<h1>Home</h1>
+<p>
+  This is a placehoolder for the home page.
+</p>
