Update login and signup forms

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -74,6 +74,13 @@ h2 {
   color: $gray-light;
 }
 
+h3 {
+  font-size: 1.7em;
+  letter-spacing: 0px;
+  margin-bottom: 30px;
+  text-align: left;
+}
+
 p {
   font-size: 1.1em;
   line-height: 1.7em;
