--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,3 +14,16 @@
  *= require_self
  */
 
+.yt_video {
+  max-width: 320px;
+  margin-left: auto;
+  margin-right: auto;
+
+  img {
+    cursor: pointer;
+    width: 100%;
+    height: auto;
+  }
+
+  .glyphicon-thumbs-down {margin-left: 20px;}
+}
