--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -11,9 +11,14 @@ $gray-medium-light: #eaeaea;
   box-sizing:         border-box;
 }
 
+
+/* video player */
+
 .player-wrapper {
          position: relative;
 }
+
+
 
 /* miscellaneous */
 
@@ -67,6 +72,14 @@ h1 {
   text-align: center;
 }
 
+h1w {
+  font-size: 4em;
+  letter-spacing: -2px;
+  margin-bottom: 30px;
+  text-align: center;
+  text-shadow: 2px 4px 3px rgba(0,0,0,0.3);
+}
+
 h2 {
   font-size: 1.7em;
   letter-spacing: 0px;
@@ -100,14 +113,36 @@ h5 {
   color: white;
 }
 
-.highlightme { background-color: black;
-               padding: 0 5px;  }
-
 p {
   font-size: 1.1em;
   line-height: 1.7em;
 }
 
+p1 {
+  font-size: 1.5em;
+  line-height: 1.7em;
+  text-align: center;
+  color: white;
+}
+
+.highlightme { background-color: black;
+               padding: 0 5px;  }
+
+.text_overflow {
+  display: block; /* Fallback for non-webkit */
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  width: 290px;
+  white-space: normal;
+  overflow: hidden;
+  line-height: 1.7em;
+  height: 2.5em;
+  &:hover {
+    overflow: visible;
+    padding-bottom: 38px;
+  }
+}
 
 
 /* header */
@@ -128,6 +163,15 @@ p {
 }
 
 
+/* jumbotron */
+
+.jumbotron {
+  background: url('jumbotron-skyline.png'); 
+}
+
+.container .jumbotron {
+  text-align: center;
+}
 
 /* footer */
 
