--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,23 @@
         <li><%= link_to "Home",      root_path %></li>
         <li><%= link_to "Artists",   artist_path %></li>
       </ul>
+
       <ul class="nav navbar-nav navbar-right">
+        <li>
+          <div style="display:inline">
+            <%= form_tag search_videos_path, method: :get, class: "form-inline", 
+                                             role: "search" do %> 
+              <div class="form-group">
+                <%= text_field_tag :search, params[:search], class: "form-control", 
+                                           id: "searchForm", placeholder: "Search" %>
+              </div>
+              <%= button_tag(type: "submit", class: "btn btn-default", 
+                                         id: "searchButton") do %>
+                <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+              <% end %>
+            <% end %>   
+          </div>      
+        </li>
         <li><%= link_to "About Us",  about_path %></li>
         <li><%= link_to "Contact",   contact_path %></li>
         <% if logged_in? %>
