--- a/app/views/videos/search.html.erb
+++ b/app/views/videos/search.html.erb
@@ -9,15 +9,13 @@
     <div id="player-wrapper"></div>
     <br></br>
     <%= will_paginate %>
-    <% @videos.in_groups_of(3) do |group| %>
       <div class="row">
-        <% group.each do |video| %>
+        <% @videos.each do |video| %>
           <% if video %>
             <%= render 'videos', video: video %>
           <% end %>
         <% end %>
       </div>
-    <% end %>
     <%= will_paginate %>
   </div>
 <% end %>
