Compile assets in production mode

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -207,7 +207,7 @@ a.videolink {
 /* jumbotron */
 
 .jumbotron {
-  background: url('jumbotron-skyline.png'); 
+  background: image-url('jumbotron-skyline.png'); 
 }
 
 .container .jumbotron {
